--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,16 @@ p {
   color: var(--clr-primary-1);
   background: var(--clr-primary-7);
 }
+
+.trans-btn{
+  background: transparent;
+  color: var(--clr-primary-2);
+  padding: 0.375rem 0.75rem;
+  transition: var(--transition);
+  cursor: pointer;
+  border-color: transparent;
+}
+
 .title {
   text-align: center;
 }
